# void

./: .gitignore  .lvimrc  Cargo.toml  README.md  go.mod  main.go
assets/scripts/: viewer.js
assets/style/: view.css
database/: create_tables.sql
src/: base64.rs  common.rs  database.rs  download.rs  main.rs  upload.rs
src/pages/: home.rs  mod.rs  view.rs
templates/: home.html  view.html
